--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="sticky-top">
       <nav class="navbar navbar-expand-sm navbar-dark bg-success px-3">
         <!--   logo     -->
-        <img src="https://lh3.googleusercontent.com/gP1MO59IkDhhNKZhOJ7yFKgK_dNLF1hLmMmvG24MRiHJ-vy11jEmRNQ1Eif99CRfQCD2Dd1ShBbtMtBVtelklLJyTQfWo26VDl-vgii37ple4IgOX3fydjfgq5WdYKi9B9Xe7BjblkYYWVUKv_Rfmbc-1ju7niF4yrM-WUGgS6Jf63FpabAUNQqXRJs9_rtIlr8lF-rExkvsJdtL-rwDRgDjUxpyLg8DLd4c-RC9me1yJED3Px0fihXskiUiYLkBjddgq876xcRHLhEyqUUqaYHGd5smyiQwaJEShFPtjW87H2Q96KsXWhikm84hyZGCcrB4mQsH_cnZle7-yFvLMjxop99VPRz-YxqW6Y83v_VR27vccH0t3lSRB0skvIduHIT5fLo6hk-HpaTOeSTw4GEKEqsxuUDlOKweNZXJ7qHWKpibieiIQ2rIEoA7C7_YOVG-gv1tlvM8IOghK6pE2sSq31Zn6NXn4tnItoresraW5oa5OZOFgrHSV04N79riUxq7xNVKqpV-X1diorMWzrmBsFV0o9k3cxplF4ybFPiA1z7Jij1qk2hh08e0vQ62GCzCG5ZV1yf8rPyT6TYEvdDnuBIRR9_fm7utm14x0mZHZ-gdC3UeV_ZxQ9Yb6KjzHd6MkpTbI3uvLm8J5sTrnZ3zzKnBZTLMrFCWuY9TVX4tiOQHv6Y_l95Ywvp1a_HhnRwmU-nkgJi_c7rEDT7sgdfghXzur4PHzoAZfgjilO7RPbWdZ_xhksbQleunh79SA3GD0muUD_ppR6Y4VBZrONMfogYtbZkayg=s96-no?authuser=1" alt="JILÓSOULBAND">
+        <img src="/jukeboxmusic.svg" alt="JILÓSOULBAND">
       
       <!-- Button  -->
         <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navegacao2">
