--- a/agenda.html
+++ b/agenda.html
@@ -21,7 +21,7 @@
     <header class="sticky-top">
       <nav class="navbar navbar-expand-sm navbar-dark bg-success px-3">
         <!--   logo     -->
-        <img src="https://raw.githubusercontent.com/Paucinha/imagem/3b2bd36bd1e43444418c82aa71281603532b27f1/jukeboxmusic.svg" alt="JILÓSOULBAND">
+        <img src="https://raw.githubusercontent.com/Paucinha/assets/master/Eggplant_icon-icons.com_68750.png" alt="JILÓSOULBAND">
       
       <!-- Button  -->
         <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navegacao2">
